--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #306c55;
+  background-color: #202142;
   color: #fff;
   line-height: 1.6;
 }
